# ai-companion2

./: .gitignore  pyproject.toml
src/ai_companion2/: main.py
src/ai_companion2/analysis/: extract_image.py  llm_engine.py
src/ai_companion2/capture/: screen_capture.py
src/ai_companion2/config/: settings.py
src/ai_companion2/ui/: app_ui.py
src/ai_companion2/utils/: image_queue.py  logging.py
tests/: test_smoke.py
