[project]
name = "ai-companion2"
version = "0.1.0"
description = "AI gameplay companion coach"
authors = [
    {name = "Nathan Meek",email = "Nathan.meek4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
